--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,15 +17,19 @@ sites:
   - name: Pihole-NBG
     url: $URL_PIHOLE_DE
     icon: https://pi-hole.net/favicon.ico
+    __dangerous__insecure: true
   - name: Pihole-HEL
     url: $URL_PIHOLE_FI
     icon: https://pi-hole.net/favicon.ico
+    __dangerous__insecure: true
   - name: Pihole-FSN
     url: $URL_PIHOLE_FSN1
     icon: https://pi-hole.net/favicon.ico
+    __dangerous__insecure: true
   - name: Pihole-KA
     url: $URL_PIHOLE_MERZ_NIMBUS
     icon: https://pi-hole.net/favicon.ico
+    __dangerous__insecure: true
 # --- SYNCTHING
   - name: Syncthing-NBG
     url: $URL_SYNCTHING_HETZNER_CLOUDSERVER_DE
