--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -166,6 +166,12 @@ sites:
   - name: CDN for Media CCC
     url: https://cdn.media.ccc.de
     icon: https://blinry.org/voctocat/voctocat.svg
+  - name: Codeberg
+    url: https://codeberg.org/thomasmerz
+    icon: https://design.codeberg.org/logo-kit/icon_inverted.svg
+  - name: Forgejo
+    url: https://code.forgejo.org/thomasmerz
+    icon: https://code.forgejo.org/assets/img/logo.svg
 # --- MYPDNS-GITLAB
 #  - name: My Privacy DNS
 #    url: https://mypdns.org/-/liveness?token=8QTcgMMaEQgzGtdxwPui
