--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -172,6 +172,10 @@ sites:
   - name: Forgejo
     url: https://code.forgejo.org/thomasmerz
     icon: https://code.forgejo.org/assets/img/logo.svg
+  - name: Gitea
+    url: https://gitea.com/explore/repos
+    iron: https://gitea.com/assets/img/logo.svg
+  - name: GitLab
   - name: GitHub
     url: https://github.com/thomasmerz/
     iron: https://github.com/fluidicon.png
